# JarvisQwen

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  README.zh.md  docker-compose.yml  install.sh
.claude/: launch.json
server/: Dockerfile  pyproject.toml
server/app/: access.py  auth.py  config.py  db.py  main.py  models.py  ratelimit.py
server/app/api/: auth_api.py  events.py  keys.py  misc.py  tasks.py  users.py
server/app/connectors/: arxiv.py  export.py  news.py  notify.py  pdf_ingest.py  telegram_bot.py  zotero.py
server/app/core/: bus.py  settings_store.py
server/app/core/budget/: guard.py
server/app/core/cache/: semantic.py
server/app/core/engine/: engine.py  task_templates.py
server/app/core/engine/graphs/: __init__.py  arxiv_watch.py  briefing.py  echo.py
server/app/core/memory/: memory.py
server/app/core/router/: cascade.py  llm.py  policy.py  providers.py  resilience.py
server/app/core/scheduler/: runner.py
server/app/core/security/: audit_log.py  prompt_guard.py  redact.py
server/tests/: smoke_e2e.py  test_core.py  test_tier_features.py
web/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/app/approvals/: page.tsx
web/app/audit/: page.tsx
web/app/briefings/: page.tsx
web/app/connect/: page.tsx
web/app/dashboard/: page.tsx
web/app/deploy/: page.tsx
web/components/: cost-chart.tsx  events-provider.tsx  nav.tsx  theme-provider.tsx  toast.tsx  topbar.tsx  ui.tsx
web/lib/: api.ts  i18n.tsx
web/public/: manifest.json
(+9 files in other folders)
