[project]
name = "aaos-server"
version = "0.1.0"
description = "AAOS - AI Agent Operating System: control plane for cloud LLM agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "litellm>=1.40",
    "cryptography>=42",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
export-pdf = ["reportlab>=4.0"]
dev = ["pytest>=8", "pytest-asyncio", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
